# pandas_ops

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
__dev/: maps.py  scrapheap.py
pandas_ops/: filters.py  io.py  ipython_ops.py  iteration.py  lex_ops.py  misc.py  numba_ops.py  printing.py  sortedness.py  stats.py  string_operations.py  string_ops.py  uniqueness.py
pandas_ops/parsers/: misc.py  tims.py
pandas_ops/tools/: assert_lexicographically_sorted.py  df_cat.py  df_head.py  df_histogram.py  df_len.py  df_manipulation.py  df_parsingstack.py  df_reformat.py  echotoml.py  jsons2df.py  pandas_ops_run_sql_on_table.py  reformat_into_parquet.py  reformatting.py  runsql.py  sqlite_peek.py
tests/: test_pandas_ops.py
tools/: apply_sql_with_duckdb.py  df_cat.py  df_equal.py  df_filter.py  df_head.py  df_histogram.py  df_len.py  df_parsingstack.py  df_reformat.py  df_summarize.py  df_translate.py  pandas_ops_run_sql_on_table.py  reformat_into_parquet.py
