[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="pandas_ops"
version="0.0.2"
description="Common operations on pandas data frames."
readme="README.md"
authors=[
    {name="Mateusz Krzysztof Łącki",email="matteo.lacki@gmail.com"},
    {name="Michał Piotr Startek",email="michalsta@mimuw.edu.pl"},
]
dependencies = [
    "numpy",
    "numba",
    "numba_progress",
    "pandas",
    "tqdm",
    "duckdb",
    "pytest",
    "h5py",
]

[project.scripts]
write_config = "pandas_ops.tools.write_config:main"
apply_sql_with_duckdb = "pandas_ops.tools.apply_sql_with_duckdb:main"
df_cat = "pandas_ops.tools.df_cat:main"
df_equal = "pandas_ops.tools.df_equal:main"
df_head = "pandas_ops.tools.df_head:main"
df_histogram = "pandas_ops.tools.df_histogram:main"
df_len = "pandas_ops.tools.df_len:main"
df_parsingstack = "pandas_ops.tools.df_parsingstack:main"
pandas_ops_run_sql_on_table = "pandas_ops.tools.pandas_ops_run_sql_on_table:main"
reformat_table = "pandas_ops.tools.reformatting:reformat_table"

[project.urls]
homepage="https://github.com/midiaIDorg/pandas_ops.git"
repository="https://github.com/midiaIDorg/pandas_ops.git"

[tool.uv]
reinstall-package = ["pandas_ops"]


[tool.pytest.ini_options]
testpaths = ["tests"]